<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--All the items added without any grouping-->

    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/books8"
        android:title="@string/navigation_item_1"/>
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/book135"
        android:title="@string/navigation_item_2" />
    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/open161"
        android:title="@string/navigation_item_3" />
    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/books19"
        android:title="@string/navigation_item_4" />
    <item
        android:id="@+id/navigation_item_5"
        android:icon="@drawable/gears6"
        android:title="@string/navigation_item_5" />
    <item
        android:id="@+id/navigation_item_6"
        android:icon="@drawable/gears6"
        android:title="@string/vk" />
</menu>
