<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/vk_grey_color">

    <TextView
        android:id="@+id/textCustomDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:padding="12dp"
        android:text="@string/toLearnNewWords"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/learnDialogBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/learn_word"
        android:textColor="@color/colorTextPrimaryLight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dontLearnDialogBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dontlearn_word"
        android:textColor="@color/colorTextPrimaryLight"
        android:textSize="20sp" />

</LinearLayout>