<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context="com.savewords.MainActivity" >

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="10dp" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/foreign_word_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyColor">

                <AutoCompleteTextView
                    android:id="@+id/foreign_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="55dp"
                    android:hint="@string/foreign_word"
                    style="MyAutoCompleteTextView"
                    android:popupBackground="@drawable/background"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nativ_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyColor">

            <AutoCompleteTextView
                android:id="@+id/nativ_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/nativ_word"
                android:popupBackground="@drawable/background"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/button_add"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/proseedToLesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/proseedToLesson"
            android:gravity="center"
            android:textColor="@color/colorTextPrimaryLight"
            android:padding="12dp"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>