<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textSize="10sp" />

        <Button
            android:id="@+id/addForLearning"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="@string/addForLearning"
            android:textSize="10sp" />

        <Button
            android:id="@+id/voice"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/voice"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainDataTextView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="45sp" />
z

        <TextView
            android:id="@+id/translat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="25sp"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/countWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:textColor="#000000"
                android:textSize="17sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

        </LinearLayout>
    </LinearLayout>

</LinearLayout>