<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_header"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/colors"
    android:alpha="0.8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/headerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/description"
                android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/headerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimaryLight"
                style="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/headerLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimaryLight"
                style="@style/TextAppearance.AppCompat.Title" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/allWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allWords"
                android:textSize="15sp"
                android:textColor="@color/colorTextPrimaryLight"
                style="@style/TextAppearance.AppCompat.Title"/>
            <TextView
                android:id="@+id/numberAllWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimaryLight"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/learnedWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learnedWords"
                android:textSize="15sp"
                android:textColor="@color/colorTextPrimaryLight"
                style="@style/TextAppearance.AppCompat.Title"/>
            <TextView
                android:id="@+id/numberlLearnedWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimaryLight"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
